--- a/style.css
+++ b/style.css
@@ -1,18 +1,36 @@
 body {
-    color: aliceblue;
+    color: white;
     background-color: #404040;
+    font-family: Arial, Helvetica, sans-serif
 }
 
-#menu ul {
+#menu ul
+{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
+    
 }
+ a{
+    color: white;
+ }   
+ h3{
+    border-top: solid 2px red;
+ }
+
 
 .tartalom {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr 1fr 1fr;
 
 }
+.tartalom2{
+    background-color: black;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    
+}
+
+
 
 #container {
     max-width: 800px;
@@ -24,9 +42,11 @@ body {
 img {
     max-width: 300px;
     width: 90%;
+    
 }
-
-
+img#jobb{
+    float: right;
+}
 .cikk {
     margin:auto;
     text-align: center;
